# bwinf-kaese

./: Cargo.toml  kaese-linux  out_1.txt  out_3.txt  out_4.txt  out_6.txt  solution_2.txt  solution_6.txt
src/: cheese.rs  cheese_builder.rs  main.rs  path.rs  pieces_map.rs  prev_pieces.rs
