[package]
name = "kaese"
version = "0.1.0"
description = "Ein Programm, das Käsequader aus Scheiben wieder zusammensetzen kann."
authors = ["Arne de Borman"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
lto = true
#panic = "abort"
[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
rand = "0.8.5"
rustc-hash = "1.1.0"
[dependencies.uuid]
version = "1.2.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
